--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,24 @@ html,
 body {
   margin: 0;
   background-color: #f4f8fb;
+  background-image: url(./utils/backroundimg4.jpg);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    background-size: cover;   
+}
+.autoComplete_dropdown_container {
+  position: absolute!important;
+  z-index: 1000;
+  border-radius: 2px;
+  color: black;
+  border-top: 1px solid #d9d9d9;
+  font-family: Arial, sans-serif;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  overflow: hidden;
+  width: 100%
 }
 
 .app-container {
@@ -170,9 +186,23 @@ body {
   text-decoration: none;
   font-weight: bold;
   margin-right: 5px;
+  margin-bottom: 5px;
+  margin-top: 5px;
   color: var(--lightSquidInk);
 }
+.link-2 {
+  text-decoration: none;
+  font-weight: bold;
+  margin-right: 5px;
+  color: white;
+}
 
+.location-search-input{
+  width: 100%;
+   padding:.3em;
+   border-radius:5px;
+   border-color: aliceblue
+}
 .link:hover {
   text-decoration: underline;
 }
@@ -193,6 +223,7 @@ body {
   justify-content: center;
   flex-direction: column;
   flex-wrap: wrap;
+
 }
 
 .market-title {
@@ -277,6 +308,7 @@ body {
   grid-auto-flow: row dense;
   justify-items: center;
   grid-gap: 0.2em;
+  
 }
 
 .flex-center {
@@ -290,4 +322,16 @@ body {
   .hide-xs {
     display: none;
   }
+}
+
+.items-link{
+  text-decoration: none;
+    font-weight: bold;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    margin-top: 5px;
+    color: var(--lightSquidInk);
+    height: 2rem;
+    align-items: center;
+    display: flex;
 }
